--- a/css/P2.css
+++ b/css/P2.css
@@ -345,8 +345,8 @@ body {
     width: 30px;
     height:30px;
     background: rgb(0, 0, 0);
-    border: 2px solid rgb(255, 255, 255);
-    border-radius: 50%;
+    /* border: 2px solid rgb(255, 255, 255);
+    border-radius: 50%; */
     cursor: pointer;
 }
 .slider input[type="range"]::-webkit-slider-thumb:hover {
