--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: rgb(29,29,29,1);
+  background-color: rgba(58, 45, 75, 1);
   font-family: 'Kanit', sans-serif;
 /*font-family: 'Roboto', sans-serif;*/
 text-align: center;
@@ -10,18 +10,19 @@ overflow: hidden;
 transition: opacity 1s ease-in-out;
 }
 .v3_29 {
-  width: 834px; /* ความกว้างของแอปของคุณ */
-  height: 1805px; /* ความสูงของแอปของคุณ */
-  background: rgba(29,29,29,1); /* สีพื้นหลังของแอปของคุณ */
+  width: 834px; 
+  height: 1194px; 
+  background: rgba(58, 45, 75, 1); /* สีพื้นหลังของแอปของคุณ */
+  background-image: url('./SiamPiwat/allBG.png');
   opacity: 1;
   position: relative;
   top: 0px;
   left: 0px;
   overflow: hidden;
   /* เพิ่มคุณสมบัติที่เกี่ยวข้องกับ iPad Pro 11 */
-  max-width: 100%; 
-  max-height: 100%; 
-  margin: auto; 
+  max-width: 120%; 
+  max-height: 120%; 
+  width: 120%;
 } 
 .hidden {
   opacity: 0;
