--- a/css/P2.css
+++ b/css/P2.css
@@ -11,7 +11,7 @@ body {
 .imghlab {
   width: 40%;
   text-align: center;
-  margin-top: 10vh;
+  margin-top: 8vh;
   margin-bottom: 5vh;
   }
 
@@ -148,20 +148,21 @@ body {
 
 }
 .square-imagediv {
-  display: flex;    
+  display: flex;
+  margin-top: 3vh;    
 
 }
  .square-image2 {
-  width: 80px; 
-  height: 80px;  
+  width: 70px; 
+  height: 70px;  
   margin: 10px; 
   display: inline-flex;
+  margin-bottom: 2vh;
 
 
 } 
 directionresult {
-  display: flex;    
-
+  display: flex;
 }
 .ani-image1 {
   width: 100%; 
@@ -207,16 +208,14 @@ directionresult {
   text-align: center;
 }
 .v3_281 {
-  width: 587px;
+  
   color: rgba(103,102,102,1);
-  position: initial;
-  top: 1155px;
-  left: 123px;
   font-family: 'Kanit', sans-serif;
   font-weight: Regular;
   font-size: 16px;
   opacity: 1;
   text-align: center;
+  /* margin-top: 10vh; */
 }
 .random {
   width: 587px;
@@ -256,7 +255,8 @@ directionresult {
 }
 .v3_202 {
   color: rgba(103,102,102,1);
-  margin-bottom: 3vh;
+  margin-bottom: 1vh;
+  margin-top: 3vh;
   text-align: center;
 }
 .v3_59 {
@@ -269,6 +269,7 @@ directionresult {
 }
 
 .button-container {
+  
   display: grid;
   grid-template-columns: repeat(4, 178px);
   grid-template-rows: repeat(2, 50px);
@@ -279,8 +280,7 @@ directionresult {
 .button {
   width: 200px;
   height: 50px;
-  background: rgb(103, 101, 101);
-  opacity: 0.3;
+  opacity: 1;
   position: relative;
   top: 0px;
   left: 0px;
@@ -292,9 +292,36 @@ directionresult {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: rgb(241, 232, 232); 
+  color: rgba(223, 203, 167, 1); 
   font-family: 'Kanit', sans-serif;
+  border: 1px solid #ffffff;
 }
+#p1{
+  background: rgba(61, 44, 78, 1);
+}
+#p2{
+  background: rgba(142, 73, 156, 1);
+}
+#p3{
+  background: rgba(47, 52, 146, 1);
+}
+#p4{
+  background: rgba(112, 201, 235, 1);
+}
+#p5{
+  background: rgba(69, 176, 132, 1);
+}
+#p6{
+  background: rgba(25, 91, 125, 1);
+}
+#p7{
+  background: rgba(162, 132, 72, 1);
+}
+#p8{
+  background: rgba(255, 255, 255, 1);
+}
+
+
 
 .range {
   display: flex;
@@ -302,7 +329,8 @@ directionresult {
 }
 
 .range__slider {
-  width: 45%;
+  width: 100%;
+  
 }
 
  
@@ -383,7 +411,6 @@ input::-moz-focus-inner, input::-moz-focus-outer {
    
     /* transform: translate(-50%,-50%); */
 margin-top: 5vh;
-
     display: flex;
     
 }
@@ -456,17 +483,16 @@ margin-top: 5vh;
   opacity: 0;
 }
 
-.confirm{
+.comfirmimg{
+  margin-top: 3vh;
 
 }
 
-/* .iconbar
+.iconbar
 {
-position: fixed;
-bottom: 0;
-width: 100%;
-display: flex;
-justify-content: space-around;
-align-items: center;
-
-} */
+/* position: fixed; */
+margin-bottom: 0vh;
+margin-top: 2vh;
+/* margin-left: 2vh;
+margin-right: 2vh; */
+} 
