--- a/css/Count.css
+++ b/css/Count.css
@@ -3,7 +3,7 @@ body {
   display: grid;
   height: 100vh;
   place-items: center;
-  background-color: rgb(29,29,29,1);
+  background-color: rgba(58, 45, 75, 1);
   overflow: hidden;
 }
 
@@ -28,19 +28,19 @@ body {
 }
 
 .base-timer__path-elapsed {
-  stroke-width: 2px;
-  stroke: rgb(29,29,29,1);
+  stroke-width: 0.5vh;
+  stroke: rgba(58, 45, 75, 1);
 }
 
 .base-timer__path-remaining {
-  stroke-width: 1px;
+  stroke-width: 0.5px;
   stroke-linecap: round;
   transform: rotate(90deg);
   transform-origin: center;
   transition: 1s linear all;
   fill-rule: nonzero;
   stroke: currentColor;
-  color: rgb(255, 255, 255);
+  color: rgba(162, 132, 73, 1);
 
   
 }
@@ -59,15 +59,15 @@ body {
 
 .base-timer__label {
 
-  display: flex;
+   display: flex;
   
   /* align-items: center; */
-  justify-content: center;
+  /*justify-content: center;
   margin-top: -400px; 
   font-size: 250px;
   font-family: 'Kanit', sans-serif;
   font-weight: bold;
-  color: white;
+  color: rgba(162, 132, 73, 1); */
 }
 .thank{
   
@@ -82,18 +82,6 @@ body {
   color: white;
 }
 
-.v3_52 {
-  width: 373px;
-  height: 79px;
-  
-  background-position: center center;
-  background-size: cover;
-  opacity: 1;
-  position: absolute;
-  top: 1050px;
-  left: 32%;
-  
-}
 .v3_53 {
   width: 373px;
   height: 79px;
