--- a/css/Count.css
+++ b/css/Count.css
@@ -1,19 +1,30 @@
 body {
-  font-family: sans-serif;
-  display: grid;
-  height: 100vh;
-  place-items: center;
-  background-color: rgba(58, 45, 75, 1);
+  margin: 0;
+  padding: 0;
   overflow: hidden;
-}
+  
+  background-color: rgba(58, 45, 75, 1);
+  background-size:96%; 
+  background-image: url(/images/BGcount.png);
+  background-repeat: no-repeat; 
+  background-attachment: fixed; 
+  /* background-position-y: -10px; */
+  background-position-x: 25px;
+  
+  }
+  .imghlab {
+    width: 40%;
+    text-align: center;
+    margin-top: 8vh;
+    margin-bottom: 5vh;
+    }
 
 .base-timer {
-  position: relative;
-  width: 500px;
-  height: 500px;
-  top: 40px; 
-  left: 50%; 
-  transform: translate(-50%, -50%); 
+  /* position: relative; */
+  display: flex;
+  margin-top: 0vh;
+  width: 60%
+  /* transform: translate(100%, 100%);  */
 }
 
 .base-timer__svg {
@@ -60,54 +71,51 @@ body {
 .base-timer__label {
 
    display: flex;
-  
-  /* align-items: center; */
-  /*justify-content: center;
-  margin-top: -400px; 
+  align-items: center;
+  justify-content: center;
+  margin-top: -38vh;
   font-size: 250px;
   font-family: 'Kanit', sans-serif;
   font-weight: bold;
-  color: rgba(162, 132, 73, 1); */
+  color: rgba(162, 132, 73, 1);
+}
+.sec {
+  display: flex;
+ align-items: center;
+ justify-content: center;
+ margin-top: -5vh;
+ font-size: 40px;
+ font-family: 'Kanit', sans-serif;
+ color: rgba(162, 132, 73, 1);
 }
 .thank{
-  
+
+  margin-top: 15vh;
+  margin-bottom: 7vh;
   display: flex;
-  
-  /* align-items: center; */
+  align-items: center;
   justify-content: center;
-  margin-top: -160px; 
-  font-size: 80px;
+  font-size: 4vh;
   font-family: 'Kanit', sans-serif;
   /* font-weight: bold; */
   color: white;
 }
 
-.v3_53 {
-  width: 373px;
-  height: 79px;
-  background: rgba(255,255,255,1);
-  opacity: 1;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  border-top-left-radius: 43px;
-  border-top-right-radius: 43px;
-  border-bottom-left-radius: 43px;
-  border-bottom-right-radius: 43px;
-  
-}
-.v3_54 {
-  width: 364px;
-  color: rgba(23,23,23,1);
-  position: absolute;
-  top: 19px;
-  left: 3px;
-  font-family: 'Kanit', sans-serif;
-  font-weight: Bold;
-  font-size: 34px;
-  opacity: 1;
-  text-align: center;
-}
 .hidden {
   opacity: 0;
 }
+
+.iconbar
+{
+  position: fixed;
+bottom: 0;
+width: 100%;
+display: flex;
+justify-content: space-around;
+align-items: center;
+height: 60px;
+}
+
+.comfirmimg{
+  /* margin-top: -40vh;*/
+} 
