--- a/css/P2.css
+++ b/css/P2.css
@@ -5,7 +5,7 @@ body {
   background-color:#3A2D4B;
   font-family: 'Kanit', sans-serif;
   /*font-family: 'Roboto', sans-serif;*/
-  text-align: center;
+  /* text-align: center; */
   overflow: hidden;
   }
 
@@ -59,26 +59,7 @@ body {
   border-color: aqua;
 }
 
-.white-box {
-  width: 550px; 
-  height: 30px; 
-  background-color: white; 
-  border-radius: 80px;
-  position: initial;
-  top: 510px;
-  left: 140px;
-  text-align: center;
-}
-.white-box2 {
-  width: 550px; 
-  height: 30px; 
-  background-color: white; 
-  border-radius: 80px;
-  position: initial;
-  top: 840px;
-  left: 140px;
-  text-align: center;
-}
+
 
 .square-image {
   width: 95px; 
@@ -172,27 +153,27 @@ body {
   text-decoration: underline;
   letter-spacing: 1px;
 }
-.slow {
-  
-  color: rgb(255, 255, 255);
-  position: initial;
-  top: 1050px;
-  left: 0px;
-  font-family: 'Kanit', sans-serif;
-  font-weight: Regular;
-  font-size: 16px;
-  text-align: center;
+.container {
+  display: flex;
+  justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
 }
-.fast {
-  
+
+.slow, .fast {
   color: rgb(255, 255, 255);
-  position: initial;
-  top: 1050px;
-  right: 0px;
   font-family: 'Kanit', sans-serif;
   font-weight: Regular;
   font-size: 16px;
-  text-align: center;
+  
+}
+
+.slow {
+  text-align: left;
+}
+
+.fast {
+  text-align: right;
 }
 .v3_202 {
   color: rgba(103,102,102,1);
@@ -209,8 +190,10 @@ body {
   
   display: grid;
   grid-template-columns: repeat(4, 178px);
-  grid-template-rows: repeat(2, 50px) 70px;
+  grid-template-rows: repeat(2, 50px);
+  grid-template-rows: repeat(1, 50px) 60px 70px;
   gap: 30px;
+  
   
 }
 
@@ -230,7 +213,7 @@ body {
 
 .range {
   display: flex;
-  width: 600px;
+  width: 100%; 
 }
 
 .range__slider {
@@ -242,16 +225,16 @@ body {
   width: 50vh;
  }  */
 
-.form-group {
+/* .form-group {
   display: flex;
   flex-direction: column; 
   justify-content: center;
-}
+} */
 
-.form-group label {
+/* .form-group label {
   text-transform: uppercase;
   font-size: .7rem;
-  color: #222;
+  color: #dc0303;
   margin-bottom: 5px;
 }
 
@@ -259,95 +242,39 @@ body {
   font-size: 2rem;
   font-weight: 600;
   color: #3c3b3b;
-}
+} */
 
-.range__slider label {
-  margin-bottom: 10px;
-}
+/* .range__slider label {
+  margin-bottom: 2%;
+} */
 
 .range__slider [type="range"] {
   width: 100%;
   -webkit-appearance: none;
-  height: 13px;
+  height: 4px;
   border-radius: 6px;
-  background: #f1f1f1;
-  outline: none;
-  padding: 0;
-  margin: 0;
-}
-
-/* custom thumb */
-.range__slider [type="range"]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background: #7a00ff;
-  border: #f9ca24 5px solid;
-  cursor: pointer;
-  -webkit-transition: background .15s ease-in-out;
-  transition: background .15s ease-in-out;
-}
-
-.range__slider [type="range"]::-webkit-slider-thumb:hover {
-  background: #f0932b;
-}
-
-.range__slider [type="range"]::-moz-range-thumb {
-  width: 20px;
-  height: 20px;
-  border: 0;
-  border-radius: 50%;
-  background: #f0932b;
-  border: #f9ca24 5px solid; cursor: pointer;
-  -webkit-transition: background .15s ease-in-out;
-  transition: background .15s ease-in-out;
+  
 }
 
 .range__slider [type="range"]::-moz-range-thumb:hover {
   background: white;
 }
 
-/* remove border */
-input::-moz-focus-inner, input::-moz-focus-outer {
-  border: 0;
-}
-
+ 
 .slider {
-   
-    /* transform: translate(-50%,-50%); */
-margin-top: 4vh;
-    display: flex;
+   margin-top: 3vh;
     
-}
-.slider p {
-    font-size: 26px;
-    font-weight: 600;
-    font-family: Open Sans;
-    padding-left: 30px;
-    color: black;
-}
-.slider input[type="range"] {
-  	
-  	width: 100%;
- 	height: 2px;
-  	background: #A28448;
-  	border: none;
-  	outline: none;
-}
+} 
+
 .slider input[type="range"]::-webkit-slider-thumb {
    	-webkit-appearance: none !important;
     width: 30px;
     height:30px;
-    background: #A28448;
-    /* border: 2px solid rgb(255, 255, 255);
-    border-radius: 50%; */
+    background: rgba(162, 132, 72, 1);
+    border: 4px solid rgb(255, 255, 255);
+    border-radius: 50%; 
     cursor: pointer;
-}
-.slider input[type="range"]::-webkit-slider-thumb:hover {
-    background: #A28448
- } 
+} 
  .v3_52 {
   width: 373px;
   height: 79px;
@@ -404,4 +331,6 @@ margin-top: 4vh;
   justify-content: space-around;
   align-items: center;
   height: 60px;
+  /* margin-left: 0; */
+  /* margin-right: auto; */
 } 
