--- a/css/P2.css
+++ b/css/P2.css
@@ -221,34 +221,19 @@ body {
   
 }
 
- /* hr{
-  width: 50vh;
- }  */
+/* hr{
+  width: 100%;
+ }   */
 
-/* .form-group {
-  display: flex;
-  flex-direction: column; 
-  justify-content: center;
-} */
 
-/* .form-group label {
-  text-transform: uppercase;
-  font-size: .7rem;
-  color: #dc0303;
-  margin-bottom: 5px;
-}
-
-.form-group span {
-  font-size: 2rem;
-  font-weight: 600;
-  color: #3c3b3b;
-} */
 
 /* .range__slider label {
   margin-bottom: 2%;
 } */
 
-.range__slider [type="range"] {
+
+
+/* .range__slider [type="range"] {
   width: 100%;
   -webkit-appearance: none;
   height: 4px;
@@ -264,17 +249,9 @@ body {
 .slider {
    margin-top: 3vh;
     
-} 
+} */
 
-.slider input[type="range"]::-webkit-slider-thumb {
-   	-webkit-appearance: none !important;
-    width: 30px;
-    height:30px;
-    background: rgba(162, 132, 72, 1);
-    border: 4px solid rgb(255, 255, 255);
-    border-radius: 50%; 
-    cursor: pointer;
-} 
+ 
  .v3_52 {
   width: 373px;
   height: 79px;
@@ -335,5 +312,125 @@ body {
   /* margin-right: auto; */
 } 
 
+
+
+ */
+
+ 
+ 
+ main {
+   display: flex;
+   flex-direction: column;
+   gap: 2.2em;
+   padding: 1em 0;
+ }
+ 
+
+ 
+ /* === range theme and appearance === */
+ input[type="range"] {
+  margin-top: 3vh;
+   font-size: 1.5rem;
+   width: 12.5em;
+ } 
+ 
+ input[type="range"] {
+   color: rgba(242, 242, 242, 1);
+   --thumb-height: 1.125em;
+   --track-height: 0.125em;
+   --track-color: rgba(162, 132, 72, 1);
+   --brightness-hover: 180%;
+   --brightness-down: 80%;
+   --clip-edges: 0.125em;
+   width: 100%;
+ }
+ 
+ /* input[type="range"].win10-thumb {
+   color: #2b2d42;
+ 
+   --thumb-height: 1.375em;
+   --thumb-width: 0.5em;
+   --clip-edges: 0.0125em;
+ } */
+ 
+ 
+ 
+ input[type="range"] {
+   position: relative;
+   background: #fff0;
+   overflow: hidden;
+ }
+ 
+ input[type="range"]:active {
+   cursor: grabbing;
+ }
+ 
+ input[type="range"]:disabled {
+   filter: grayscale(1);
+   opacity: 0.3;
+   cursor: not-allowed;
+ }
+ 
+ /* === WebKit specific styles === */
+ input[type="range"],
+ input[type="range"]::-webkit-slider-runnable-track,
+ input[type="range"]::-webkit-slider-thumb {
+   -webkit-appearance: none;
+   transition: all ease 100ms;
+   height: var(--thumb-height);
+ }
+ 
+ input[type="range"]::-webkit-slider-runnable-track,
+ input[type="range"]::-webkit-slider-thumb {
+   position: relative;
+ }
+ 
+ input[type="range"]::-webkit-slider-thumb {
+   --thumb-radius: calc((var(--thumb-height) * 0.5) - 1px);
+   --clip-top: calc((var(--thumb-height) - var(--track-height)) * 0.5 - 0.5px);
+   --clip-bottom: calc(var(--thumb-height) - var(--clip-top));
+   --clip-further: calc(100% + 1px);
+   --box-fill: calc(-100vmax - var(--thumb-width, var(--thumb-height))) 0 0
+     100vmax currentColor;
+ 
+   width: var(--thumb-width, var(--thumb-height));
+   background: linear-gradient(currentColor 0 0) scroll no-repeat left center /
+     50% calc(var(--track-height) + 1px);
+     background: rgba(162, 132, 72, 1);
+     border: 4px solid rgba(242, 242, 242, 1);
+   box-shadow: var(--box-fill);
+   border-radius: var(--thumb-width, var(--thumb-height));
+ 
+   filter: brightness(100%);
+   clip-path: polygon(
+     100% -1px,
+     var(--clip-edges) -1px,
+     0 var(--clip-top),
+     -100vmax var(--clip-top),
+     -100vmax var(--clip-bottom),
+     0 var(--clip-bottom),
+     var(--clip-edges) 100%,
+     var(--clip-further) var(--clip-further)
+   );
+ }
+ 
+ input[type="range"]:hover::-webkit-slider-thumb {
+   filter: brightness(var(--brightness-hover));
+   cursor: grab;
+ }
+ 
+ input[type="range"]:active::-webkit-slider-thumb {
+   filter: brightness(var(--brightness-down));
+   cursor: grabbing;
+ }
+ 
+ input[type="range"]::-webkit-slider-runnable-track {
+   background: linear-gradient(var(--track-color) 0 0) scroll no-repeat center /
+     100% calc(var(--track-height) + 1px);
+ }
+ 
+ input[type="range"]:disabled::-webkit-slider-thumb {
+   cursor: not-allowed;
+ }
 
 
