--- a/css/Count.css
+++ b/css/Count.css
@@ -1,8 +1,13 @@
+@font-face {
+
+  font-family: 'DBonUma'; 
+  src: url('./DBonUma/DB OnUma Med v3.2.ttf') format('truetype');
+}
 body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  
+  font-family: 'DBonUma'; 
   background-color: rgba(58, 45, 75, 1);
   background-size:96%; 
   background-image: url(/images/BGcount.png);
@@ -73,19 +78,17 @@ body {
    display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: -38vh;
-  font-size: 250px;
-  font-family: 'Kanit', sans-serif;
-  font-weight: bold;
+  margin-top: -41vh;
+  font-size: 300px;
+
   color: rgba(162, 132, 73, 1);
 }
 .sec {
   display: flex;
  align-items: center;
  justify-content: center;
- margin-top: -5vh;
- font-size: 40px;
- font-family: 'Kanit', sans-serif;
+ margin-top: -10vh;
+ font-size: 70px;
  color: rgba(162, 132, 73, 1);
 }
 .thank{
@@ -95,8 +98,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 4vh;
-  font-family: 'Kanit', sans-serif;
+  font-size: 5vh;
   /* font-weight: bold; */
   color: white;
 }
