--- a/css/P2.css
+++ b/css/P2.css
@@ -1,11 +1,14 @@
+@font-face {
+
+  font-family: 'DBonUma'; 
+  src: url('./DBonUma/DB OnUma Med v3.2.ttf') format('truetype');
+}
 * {
   box-sizing: border-box;
 }
 body {
   background-color:#3A2D4B;
-  font-family: 'Kanit', sans-serif;
-  /*font-family: 'Roboto', sans-serif;*/
-  /* text-align: center; */
+  font-family: 'DBonUma';
   overflow: hidden;
   }
 
@@ -19,7 +22,7 @@ body {
 .choosecolor {
    color: rgba(242,242,242,1);
   text-align: center;
-  font-size: 1.5em;
+  font-size: 1.8em;
   margin: 10px 10px ;
 }
 .choosecolor2 {
@@ -123,7 +126,6 @@ body {
   position: initial;
   top: 480px;
   left: 123px;
-  font-family: 'Kanit', sans-serif;
   font-weight: Regular;
   font-size: 16px;
   opacity: 1;
@@ -132,7 +134,6 @@ body {
 .v3_281 {
   
   color: rgba(103,102,102,1);
-  font-family: 'Kanit', sans-serif;
   font-weight: Regular;
   font-size: 16px;
   opacity: 1;
@@ -145,7 +146,6 @@ body {
   position: initial;
   top: 1090px;
   left: 123px;
-  font-family: 'Kanit', sans-serif;
   font-weight: Regular;
   font-size: 30px;
   opacity: 1;
@@ -162,9 +162,8 @@ body {
 
 .slow, .fast {
   color: rgb(255, 255, 255);
-  font-family: 'Kanit', sans-serif;
   font-weight: Regular;
-  font-size: 16px;
+  font-size: 25px;
   
 }
 
@@ -205,51 +204,14 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* font-family: 'Kanit', sans-serif; */
 
 }
 
 
-
-.range {
-  display: flex;
-  width: 100%; 
-}
-
-.range__slider {
-  width: 100%;
-  
-}
 
 /* hr{
   width: 100%;
  }   */
-
-
-
-/* .range__slider label {
-  margin-bottom: 2%;
-} */
-
-
-
-/* .range__slider [type="range"] {
-  width: 100%;
-  -webkit-appearance: none;
-  height: 4px;
-  border-radius: 6px;
-  
-}
-
-.range__slider [type="range"]::-moz-range-thumb:hover {
-  background: white;
-}
-
- 
-.slider {
-   margin-top: 3vh;
-    
-} */
 
  
  .v3_52 {
@@ -284,7 +246,6 @@ body {
   position: initial;
   top: 19px;
   left: 3px;
-  font-family: 'Kanit', sans-serif;
   font-weight: Bold;
   font-size: 34px;
   opacity: 1;
@@ -295,7 +256,7 @@ body {
 }
 
 .comfirmimg{
-  margin-top: 3vh;
+  margin-top: 1vh;
 
 }
 
@@ -306,8 +267,10 @@ body {
   width: 100%;
   display: flex;
   justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   height: 60px;
+  text-align: center;
   /* margin-left: 0; */
   /* margin-right: auto; */
 } 
