--- a/css/P2.css
+++ b/css/P2.css
@@ -15,9 +15,14 @@ body {
 .imghlab {
   width: 40%;
   text-align: center;
-  margin-top: 4vh;
-  margin-bottom: 4vh;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
   }
+
+.choosing {
+  box-shadow: 0 0 10px 3px #ffffff7a;
+  border-radius: 21px;
+}
 
 .choosecolor {
    color: rgba(242,242,242,1);
@@ -130,6 +135,7 @@ body {
   font-size: 16px;
   opacity: 1;
   text-align: center;
+ 
 }
 .v3_281 {
   
@@ -164,11 +170,13 @@ body {
   color: rgb(255, 255, 255);
   font-weight: Regular;
   font-size: 25px;
-  
+  width: 50%; 
+  float: left;
 }
 
 .slow {
   text-align: left;
+   
 }
 
 .fast {
@@ -182,28 +190,36 @@ body {
 }
 .v3_59 {
   margin-top: 2vh;
-  margin-bottom: 3vh;
+  margin-bottom: 2vh;
+  width: 95%;
+  margin: auto;
+  padding: 30px 0;
 }
 
+.maininput{
+  width: 80%;
+  margin: auto;
+}
 .button-container {
   
-  display: grid;
-  grid-template-columns: repeat(4, 178px);
+ 
+  /* grid-template-columns: repeat(4, 178px);
   grid-template-rows: repeat(2, 50px);
   grid-template-rows: repeat(1, 50px) 60px 70px;
-  gap: 30px;
+  gap: 30px; */
   
   
 }
 
 .button {
-  width: 200px;
+  /* width: 200px;
   height: 50px;
   opacity: 1;
   position: relative;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
+  padding: 5px 5px;
 
 }
 
