--- a/css/Count.css
+++ b/css/Count.css
@@ -14,7 +14,10 @@ body {
   background-repeat: no-repeat; 
   background-attachment: fixed; 
   /* background-position-y: -10px; */
-  background-position-x: 25px;
+  background-position-x: 25px; 
+  touch-action: none;
+  overscroll-behavior: none;
+  touch-action: pan-y; 
   
   }
   .imghlab {
