--- a/css/P2.css
+++ b/css/P2.css
@@ -10,6 +10,9 @@ body {
   background-color:#3A2D4B;
   font-family: 'DBonUma';
   overflow: hidden;
+  touch-action: none;
+  overscroll-behavior: none;
+  touch-action: pan-y; 
   }
 
 .imghlab {
